--- a/Extract_different_conformations_from_PDB.ipynb
+++ b/Extract_different_conformations_from_PDB.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHHAET8yPjBd8rKyG7R0cb",
+      "authorship_tag": "ABX9TyNPoFnn8a3n0BhucUx/FJHr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "This notebook is written by **Dr. Ashfaq Ahmad** for teaching and research purposes. You are welcome to use it.\n",
+        "\n",
+        "It basically extracts different available conformations into seperate PDB files, effectively. It is particularly useful, incase you are dealing NMR structures.\n",
+        "\n",
+        "If you want to learn with me, Please subscribe to **Bioinformatics Insights**, my youtube channel.\n",
+        "\n",
+        "All the good luck"
+      ],
+      "metadata": {
+        "id": "KD3bo5XIF8tL"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
