--- a/Extracting-motif-stritches-and-phylogeny.ipynb
+++ b/Extracting-motif-stritches-and-phylogeny.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGb4F2Pzi+In8o7m/XnPkg",
+      "authorship_tag": "ABX9TyPBESb3IKAHC1ZSv2AJZDSc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,10 +32,42 @@
         "!pip install biopython seaborn matplotlib"
       ],
       "metadata": {
-        "id": "QVtR_M9qOMyD"
+        "id": "QVtR_M9qOMyD",
+        "outputId": "af232086-fb97-4ffb-f8fd-08bfd1e01e30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting biopython\n",
+            "  Downloading biopython-1.85-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (13 kB)\n",
+            "Requirement already satisfied: seaborn in /usr/local/lib/python3.12/dist-packages (0.13.2)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.12/dist-packages (3.10.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from biopython) (2.0.2)\n",
+            "Requirement already satisfied: pandas>=1.2 in /usr/local/lib/python3.12/dist-packages (from seaborn) (2.2.2)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (1.3.3)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (4.59.1)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (1.4.9)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (25.0)\n",
+            "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (11.3.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (3.2.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (2.9.0.post0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas>=1.2->seaborn) (2025.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas>=1.2->seaborn) (2025.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
+            "Downloading biopython-1.85-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.3 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m62.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: biopython\n",
+            "Successfully installed biopython-1.85\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -64,115 +96,83 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title reads .txt, scan LXXLL, extrat -10-LXXLL-10 aa stritch to .fasta\n",
-        "# 📌 Step 1: Import libraries\n",
-        "import re\n",
+        "#@title Extract 10aa–Motif–10aa patch only for the motif in \"Motif sequence\" column\n",
+        "import os\n",
+        "import pandas as pd\n",
         "\n",
-        "# 📌 Step 2: Define motif pattern\n",
-        "motif_pattern = re.compile(r'L.{2}LL')\n",
+        "# ==== Settings ====\n",
+        "csv_path = \"/content/ncbi_refseq_with_lxxll_motif.csv\"   # <-- update your CSV path\n",
+        "seq_col = \"Sequence\"\n",
+        "id_col = \"ID\"\n",
+        "motif_col = \"Motif Sequence\"\n",
+        "new_col = \"Extracted Motif\"\n",
+        "flank = 10\n",
         "\n",
-        "# 📌 Step 3: Load FASTA sequences\n",
-        "file_path = '/content/controlled_condidates_LXXLL.txt'  # Update if needed\n",
-        "sequences = {}\n",
-        "current_name = None\n",
+        "# ==== Load CSV ====\n",
+        "df = pd.read_csv(csv_path)\n",
         "\n",
-        "with open(file_path, 'r') as f:\n",
-        "    for line in f:\n",
-        "        line = line.strip()\n",
-        "        if line.startswith('>'):\n",
-        "            current_name = line[1:].strip()\n",
-        "            sequences[current_name] = ''\n",
-        "        elif current_name:\n",
-        "            sequences[current_name] += line\n",
+        "# ==== Extract patches ====\n",
+        "patches = []\n",
+        "fasta_entries = []\n",
         "\n",
-        "# 📌 Step 4: Extract motif windows\n",
-        "motif_windows = []\n",
-        "for name, seq in sequences.items():\n",
-        "    for match in motif_pattern.finditer(seq):\n",
-        "        start = match.start()\n",
-        "        end = match.end()\n",
-        "        window_start = max(0, start - 10)\n",
-        "        window_end = min(len(seq), end + 10)\n",
-        "        window_seq = seq[window_start:window_end]\n",
-        "        header = f\">{name}|LXXLL@{start}-{end}\"\n",
-        "        motif_windows.append((header, window_seq))\n",
+        "for idx, row in df.iterrows():\n",
+        "    seq_id = str(row.get(id_col, f\"row{idx}\"))\n",
+        "    sequence = str(row[seq_col]).strip()\n",
+        "    motif = str(row[motif_col]).strip()\n",
         "\n",
-        "# 📌 Step 5: Write to FASTA file\n",
-        "output_path = '/content/LXXLL_windows.fasta'\n",
-        "with open(output_path, 'w') as f:\n",
-        "    for header, window_seq in motif_windows:\n",
-        "        f.write(f\"{header}\\n{window_seq}\\n\")\n",
+        "    patch_seq = \"\"\n",
+        "    if motif and motif in sequence:\n",
+        "        start = sequence.find(motif)\n",
+        "        end = start + len(motif)\n",
         "\n",
-        "print(f\"✅ Extracted {len(motif_windows)} motif windows to: {output_path}\")\n"
+        "        win_start = max(0, start - flank)\n",
+        "        win_end   = min(len(sequence), end + flank)\n",
+        "\n",
+        "        patch_seq = sequence[win_start:win_end]\n",
+        "\n",
+        "        # FASTA header with 1-based motif position\n",
+        "        header = f\">{seq_id}|{motif}@{start+1}-{end}\"\n",
+        "        fasta_entries.append((header, patch_seq))\n",
+        "\n",
+        "    patches.append(patch_seq)\n",
+        "\n",
+        "# ==== Insert new column ====\n",
+        "df.insert(len(df.columns), new_col, patches)\n",
+        "\n",
+        "# ==== Save updated CSV ====\n",
+        "base, ext = os.path.splitext(csv_path)\n",
+        "output_csv = f\"{base}_with_patch{ext or '.csv'}\"\n",
+        "df.to_csv(output_csv, index=False)\n",
+        "\n",
+        "# ==== Save FASTA ====\n",
+        "fasta_path = f\"{base}_motif_patches.fasta\"\n",
+        "with open(fasta_path, \"w\") as f:\n",
+        "    for header, seq in fasta_entries:\n",
+        "        f.write(f\"{header}\\n{seq}\\n\")\n",
+        "\n",
+        "print(f\"✅ Processed {len(df)} rows from: {csv_path}\")\n",
+        "print(f\"✅ Updated CSV saved to: {output_csv}\")\n",
+        "print(f\"✅ FASTA saved to: {fasta_path}\")\n"
       ],
       "metadata": {
+        "id": "wlHhTAe19EGW",
+        "outputId": "d1edbf13-368d-430d-f0f1-300fbd0447df",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "cellView": "form",
-        "id": "uAQ8D8Qe96mK",
-        "outputId": "36d59788-987e-49ad-fc29-90e917dfaf68"
+        }
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ Extracted 23 motif windows to: /content/LXXLL_windows.fasta\n"
+            "✅ Processed 355 rows from: /content/ncbi_refseq_with_lxxll_motif.csv\n",
+            "✅ Updated CSV saved to: /content/ncbi_refseq_with_lxxll_motif_with_patch.csv\n",
+            "✅ FASTA saved to: /content/ncbi_refseq_with_lxxll_motif_motif_patches.fasta\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title reads .csv and perform the same function as above\n",
-        "# 📌 Step 1: Import libraries\n",
-        "import pandas as pd\n",
-        "import re\n",
-        "\n",
-        "# 📌 Step 2: Define file path and motif pattern\n",
-        "csv_path = '/content/human_viral_proteins_with_lxxll_motif.csv'  # Update with your actual file name\n",
-        "motif_pattern = re.compile(r'L.{2}LL')\n",
-        "\n",
-        "# 📌 Step 3: Load CSV and extract relevant columns\n",
-        "df = pd.read_csv(csv_path)\n",
-        "\n",
-        "# Replace these with your actual column names\n",
-        "id_column = 'ID'         # e.g., UniProt ID or gene name\n",
-        "seq_column = 'Sequence'  # column containing protein sequence\n",
-        "\n",
-        "# 📌 Step 4: Scan sequences and extract motif windows\n",
-        "fasta_entries = []\n",
-        "\n",
-        "for _, row in df.iterrows():\n",
-        "    seq_id = str(row[id_column])\n",
-        "    sequence = str(row[seq_column]).strip()\n",
-        "\n",
-        "    for match in motif_pattern.finditer(sequence):\n",
-        "        start = match.start()\n",
-        "        end = match.end()\n",
-        "        window_start = max(0, start - 10)\n",
-        "        window_end = min(len(sequence), end + 10)\n",
-        "        window_seq = sequence[window_start:window_end]\n",
-        "\n",
-        "        header = f\">{seq_id}|LXXLL@{start}-{end}\"\n",
-        "        fasta_entries.append((header, window_seq))\n",
-        "\n",
-        "# 📌 Step 5: Write to FASTA file\n",
-        "fasta_path = '/content/test_LXXLL_windows_from_csv.fasta'\n",
-        "with open(fasta_path, 'w') as f:\n",
-        "    for header, seq in fasta_entries:\n",
-        "        f.write(f\"{header}\\n{seq}\\n\")\n",
-        "\n",
-        "print(f\"✅ Extracted {len(fasta_entries)} motif windows to: {fasta_path}\")\n"
-      ],
-      "metadata": {
-        "id": "HJzsIVDDAwBx"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -199,7 +199,7 @@
         "id": "FYlEAUNEFS5h",
         "outputId": "066082ce-5d64-4c2b-bd4b-5dcc30a2a5d5"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "vuxG9o8VEzPA"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
