--- a/Treating_JSON_file.ipynb
+++ b/Treating_JSON_file.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXUIBpH8sLdrTEMOo+R1M7",
+      "authorship_tag": "ABX9TyOBZ6S6rsYtkYn382MMBtJ9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,11 +59,58 @@
       "cell_type": "code",
       "source": [
         "from Bio.PDB.MMCIFParser import MMCIFParser\n",
+        "from Bio.PDB import PDBIO, Select\n",
+        "import json\n",
+        "\n",
+        "class HeteroSelect(Select):\n",
+        "    def accept_atom(self, atom):\n",
+        "        return True  # include ATOM + HETATM\n",
+        "\n",
+        "# Load JSON\n",
+        "with open(\"/content/boltz2-hco3.json\", \"r\") as f:\n",
+        "    data = json.load(f)\n",
+        "\n",
+        "mmcif_block = data[\"structures\"][0][\"structure\"]\n",
+        "\n",
+        "with open(\"temp.cif\", \"w\") as f:\n",
+        "    f.write(mmcif_block)\n",
+        "\n",
+        "parser = MMCIFParser(QUIET=True)\n",
+        "structure = parser.get_structure(\"model\", \"temp.cif\")\n",
+        "\n",
+        "io = PDBIO()\n",
+        "io.set_structure(structure)\n",
+        "io.save(\"output.pdb\", HeteroSelect())\n",
+        "\n",
+        "print(\"✅ output.pdb saved with ligands and cofactors intact\")\n"
+      ],
+      "metadata": {
+        "id": "ENKj8j4YJsUN",
+        "outputId": "f6977118-2891-42d8-c49d-30043abbf23d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ output.pdb saved with ligands and cofactors intact\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from Bio.PDB.MMCIFParser import MMCIFParser\n",
         "from Bio.PDB import PDBIO\n",
         "import json\n",
         "\n",
         "# Load JSON\n",
-        "with open(\"/content/boltz2.json\", \"r\") as f:\n",
+        "with open(\"/content/boltz2-doroboxcin.json\", \"r\") as f:\n",
         "    data = json.load(f)\n",
         "\n",
         "# Extract mmCIF block\n",
@@ -89,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KsnAIq1t7AGT",
-        "outputId": "56cafc54-a379-4573-db2a-7e1608ac9eb4"
+        "outputId": "a88ceb58-b586-492d-f8be-656fb06e5712"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +203,7 @@
         "id": "ikHCdP9PA_D9",
         "outputId": "cecf7f64-250f-4fa8-8601-f49e48c63a75"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +251,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +274,7 @@
       "metadata": {
         "id": "Tma0d-vAVXbq"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +323,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +433,7 @@
           "height": 930
         }
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
